[project]
name = "pycep-parser"
version = "0.7.0"
description = "A Python based Bicep parser"
authors = [
    { name = "Anton Grübel", email = "anton.gruebel@gmail.com" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["bicep", "parser", "lark"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed"
]
readme = "README.md"

requires-python = ">=3.10"

dependencies = [
    "lark>=1.3.0,<2.0.0",
    "regex>=2024.11.6,<2027.0.0",
    "typing-extensions>=4.12.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/gruebel/pycep"
Repository = "https://github.com/gruebel/pycep"
Changelog = "https://github.com/gruebel/pycep/blob/master/CHANGELOG.md"
Releases = "https://github.com/gruebel/pycep/releases"

[dependency-groups]
dev = [
    "assertpy>=1.1,<2.0",
    "prek>=0.3.1,<0.4.0",
    "pytest>=9.0.0,<10.0.0",
    "ty>=0.0.14,<0.1.0",
]

[build-system]
requires = ["uv_build~=0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pycep"
module-root = ""
source-include = ["tests/**"]

[tool.uv]
required-version = "~=0.9.0"

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
select = [
    "ANN",
    "A",
    "ARG",
    "B",
    "BLE001",
    "C4",
    "DTZ",
    "E",
    "EM103",
    "F",
    "FA",
    "FBT003",
    "FLY",
    "FURB",
    "G004",
    "I",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PGH",
    "PLC",
    "PLW",
    "PLE",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T10",
    "T20",
    "TC",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "E501", # the formatter will handle any too long line
    "RET505",
    "SIM108",
]

fixable = ["I001"]

[tool.pytest]
strict = true

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = [
    "pycep",
    "tests",
]

[tool.ty.rules]
unused-ignore-comment = "error"
