[build-system]
build-backend = "uv_build"
requires = [ "uv-build~=0.10.0" ]

[project]
name = "pycep-parser"
version = "0.7.1.dev4"
description = "A Python based Bicep parser"
readme = "README.md"
keywords = [ "bicep", "lark", "parser" ]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [ { name = "Anton Grübel", email = "anton.gruebel@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "lark>=1.3.0,<2.0.0",
  "regex>=2024.11.6,<2027.0.0",
  "typing-extensions>=4.12.0,<5.0.0",
]
urls.Changelog = "https://github.com/gruebel/pycep/blob/master/CHANGELOG.md"
urls.Homepage = "https://github.com/gruebel/pycep"
urls.Releases = "https://github.com/gruebel/pycep/releases"
urls.Repository = "https://github.com/gruebel/pycep"

[dependency-groups]
dev = [
  "assertpy>=1.1,<2.0",
  "prek>=0.3.4,<0.4.0",
  "pytest>=9.0.0,<10.0.0",
  "ty>=0.0.19,<0.1.0",
]

[tool.uv]
required-version = "~=0.10.0"
build-backend.module-name = "pycep"
build-backend.module-root = ""
build-backend.source-include = [ "tests/**" ]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
  ".git",
  "__pycache__",
]
lint.select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE001",
  "C4",
  "DTZ",
  "E",
  "EM103",
  "F",
  "FA",
  "FBT003",
  "FLY",
  "FURB",
  "G004",
  "I",
  "ISC",
  "LOG",
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PLC",
  "PLE",
  "PLW",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T10",
  "T20",
  "TC",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "E501",   # the formatter will handle any too long line
  "RET505",
  "SIM108",
]
lint.fixable = [ "I001" ]
lint.preview = true

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.14"

[tool.pytest]
strict = true

[tool.ty]
environment.python-version = "3.10"
rules.unused-ignore-comment = "error"
src.include = [
  "pycep",
  "tests",
]
